# demo-opentelemetry

./: .env  .gitignore  aqua.yaml  compose.yaml
config/grafana/: config.ini
config/grafana/provisioning/dashboards/: general.yaml
config/grafana/provisioning/dashboards/general/: opentelemetry-collector.json
config/opentelemetry-collector/: config.yaml
config/prometheus/: config.yaml
open-telemetry-collector/: config.yaml
rpc/proto/lib/v1/: id.proto
rpc/proto/tenant/v1/: tenant_service.proto
service/item-service/: Cargo.toml
service/item-service/src/: config.rs  main.rs  observe.rs
service/item-service/src/observe/: middleware.rs
service/tenant-service/address-validator/: package-lock.json  package.json
service/tenant-service/address-validator/src/: main.ts
service/tenant-service/server/: Cargo.toml
service/tenant-service/server/src/: client.rs  config.rs  datastore.rs  main.rs  observe.rs  service.rs
service/tenant-service/server/src/observe/: middleware.rs
service/tenant-service/server/src/service/: reflection.rs  tenant.rs
service/tenant-service/server/src/service/tenant/: model.rs
