[package]
name = "item_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tracing"] }
hyper = { version = "0.14.26", default-features = false, features = ["server"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.11.0", features = ["tonic", "trace", "metrics"] }
opentelemetry-semantic-conventions = "0.10.0"
opentelemetry_api = { version = "0.18.0", features = ["trace"] }
tokio = { version = "1.28.2", default-features = false, features = ["rt", "macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.4.0", features = ["trace", "catch-panic"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3.17"
