[package]
name = "item_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tracing"] }
http = "0.2.9"
opentelemetry = { version = "0.18.0", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-http = "0.7.0"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic", "trace", "metrics"] }
opentelemetry-semantic-conventions = "0.10.0"
tokio = { version = "1.28.2", default-features = false, features = ["rt", "macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.4.0", features = ["trace", "catch-panic"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3.17"
