[package]
name = "tenant_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
opentelemetry = { version = "0.19.0", features = ["trace", "rt-tokio", "metrics"] }
opentelemetry-http = "0.8.0"
opentelemetry-otlp = { version = "0.12.0", features = ["tonic", "trace", "metrics"] }
opentelemetry-semantic-conventions = "0.11.0"
proto = { version = "0.1.0", path = "../../../rpc/gen/rust" }
reqwest = { version = "0.11.18", features = ["json"] }
reqwest-middleware = "0.2.2"
reqwest-tracing = "0.4.5"
serde = { version = "1.0.178", features = ["derive"] }
task-local-extensions = "0.1.4"
tokio = { version = "1.29.1", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.9.2"
tonic-reflection = "0.9.2"
tower-http = { version = "0.4.3", features = ["trace", "catch-panic"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = "0.3.17"
ulid = "1.0.0"
